[gd_scene load_steps=10 format=3 uid="uid://bjyajyyylskln"]

[ext_resource type="Script" uid="uid://d0d6uh1xr8awc" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://dun6tlj76f8w" path="res://Assets/backgrounds/2.png" id="2_853f1"]
[ext_resource type="Texture2D" uid="uid://7gqnbpwsmc1g" path="res://Assets/GUI/settings/table.png" id="3_8saeu"]
[ext_resource type="Texture2D" uid="uid://cmny28217uflm" path="res://Assets/GUI/settings/bg.png" id="3_ghw46"]
[ext_resource type="Texture2D" uid="uid://op2qjqrhsrpr" path="res://Assets/GUI/btn/play.png" id="5_8um5k"]
[ext_resource type="Texture2D" uid="uid://6o0hu5bb8orf" path="res://Assets/GUI/btn/settings.png" id="6_xim88"]
[ext_resource type="Texture2D" uid="uid://crs8tptvqqusl" path="res://Assets/GUI/btn/faq.png" id="8_cmrfp"]
[ext_resource type="PackedScene" uid="uid://dsgnfyvl16pyv" path="res://Scenes/Button.tscn" id="8_koqhg"]
[ext_resource type="AudioStream" uid="uid://cnacqddmh1ans" path="res://Assets/Sounds/others/mouse-click.mp3" id="9_cmrfp"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_tt5f1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_853f1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(3.40002, 0.600006)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_ghw46")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(0.400024, -15.4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_8saeu")

[node name="Start" parent="." instance=ExtResource("8_koqhg")]
position = Vector2(3, -72)
scale = Vector2(1.4, 1.4)
texture = ExtResource("5_8um5k")

[node name="SettingButton" parent="." instance=ExtResource("8_koqhg")]
position = Vector2(-61, 68)
texture = ExtResource("6_xim88")

[node name="Instructions" parent="." instance=ExtResource("8_koqhg")]
position = Vector2(71, 68)
texture = ExtResource("8_cmrfp")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cmrfp")
bus = &"Sound"

[connection signal="click" from="Start" to="." method="_on_start_click"]
[connection signal="click" from="SettingButton" to="." method="_on_setting_click"]
[connection signal="click" from="Instructions" to="." method="_on_instructions_click"]
